Fix: prevent body x scroll and project info + name collapsing

--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -14,6 +14,8 @@ body {
       z-index: 999;
     }
   }
+
+  overflow-x: hidden;
 }
 
 img {
